fix z-index layering issues with NavBar, LiveSchedule, and SideBar (#1172)
* rename NavBar-related z() helper layers more appropriately
* ensure NavBar layer's z-index is higher than Sidebar's layer
* use $navbar-height variable for Sidebar's height
* cleanup duplicate variable definitions
* ensure live schedule layer's z-index is higher than Sidebar's layer, but lower than NavBar's layer + fix stacking context

--- a/src/components/molecules/Sidebar/Sidebar.scss
+++ b/src/components/molecules/Sidebar/Sidebar.scss
@@ -1,14 +1,12 @@
-@import "scss/constants.scss";
+@import "scss/constants";
 
-$black: #000000;
-$white: #fff;
 $dark: #19181a;
 
 .sidebar-container {
   position: fixed;
   z-index: z(sidebar);
   right: 0;
-  top: 60px;
+  top: $navbar-height;
   width: 360px;
   height: 100%;
   display: block;
